# usbridge

./: CMakeLists.txt  Makefile  README
cmake_modules/: FindLibUSB.cmake  FindPCAP.cmake  Toolchain-mingw32.cmake
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  DeviceBridge.cpp  DeviceBridge.h  DeviceInfo.cpp  DeviceInfo.h  Interface.cpp  Interface.h  InterfaceInfo.cpp  InterfaceInfo.h  List.cpp  Logger.cpp  Logger.h  Makefile  Makefile.win32  Packet.cpp  Packet.h  UsbComm.cpp  UsbComm.h  main.cpp
src/core/: AbstractSocket.cpp  AbstractSocket.h  Adapter.cpp  Adapter.h  CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  EthPacket.cpp  EthPacket.h  GetOpt.h  Interface.cpp  Interface.h  InterfaceAdapter.cpp  InterfaceAdapter.h  List.h  Logger.h  Makefile  Makefile.win32  Packet.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketAdapter.cpp  SocketAdapter.h  StreamSocket.cpp  StreamSocket.h  Thread.cpp  Thread.h  UsbComm.cpp  UsbComm.h  UsbCommAdapter.cpp  UsbCommAdapter.h
